controllo data disponibile